AD-120:Fixed gutenberg ad alignment and ad overflow (#197)

--- a/src/sass/wpadcenter-public.scss
+++ b/src/sass/wpadcenter-public.scss
@@ -9,6 +9,11 @@
 	align-items: center;
 	clear: both;
   }
+
+  /*To limit the ad inside the container size.*/
+  .wpadcenter-ad-container {
+	  overflow:hidden;
+  }
   
   .wpadcenter-activebutton {
 	border: 1px solid;
